updated sessions endpoints
