# backend/openapi.yaml
@@ -716,11 +716,17 @@ paths:
               schema:
                 $ref: "#/components/schemas/Error"
   
-  /sessions:
+  /courses/{id}/sessions:
     get:
-      summary: Get all sessions
+      summary: Get all sessions for a course
       security:
         - bearerAuth: []
+      parameters:
+        - name: id
+          in: path
+          required: true
+          schema:
+            type: integer
       responses:
         "200":
           description: List of sessions
@@ -741,16 +747,22 @@ paths:
           description: Server error
     
     post:
-      summary: Create session (instructor only)
+      summary: Create a new session for a course
       security:
         - bearerAuth: []
+      parameters:
+        - name: id
+          in: path
+          required: true
+          schema:
+            type: integer
       requestBody:
         required: true
         content:
           application/json:
             schema:
               type: object
-              required: [courseId, location, startsAt]
+              required: [location, startsAt]
               properties:
                 courseId:
                   type: integer
@@ -763,7 +775,6 @@ paths:
                   type: string
                   format: date-time
                   nullable: true
-
       responses:
         "201":
           description: Session created
